--- a/project1/webapp/view/CouponDetails.view.xml
+++ b/project1/webapp/view/CouponDetails.view.xml
@@ -47,81 +47,81 @@
 					</fb:FilterGroupItem>
 				</fb:filterGroupItems>
 			</fb:FilterBar>
-			<Table id="couponTable" items="{path: 'CouponModel>/', parameters: { groupHeaderFactory: '.createGroupHeader' }}" mode="MultiSelect" sticky="ColumnHeaders,HeaderToolbar" growing="true" busyIndicatorDelay="0" growingThreshold="100" alternateRowColors="true">
-				<!-- Header with actions -->
-				<headerToolbar>
-					<OverflowToolbar>
-						<Title text="Coupons ({= ${CouponModel>/}.length })" />
-						<ToolbarSpacer/>
-						<Button text="Share Coupon" press="onShareCoupon" class="myUnifiedBtn" />						
-						<Button text="Add" press="onAddCoupon" class="myUnifiedBtn" />
-						<Button text="Edit" press="onEditCoupon" class="myUnifiedBtn" />
-						<Button text="Delete" press="onDeleteCoupon" class="myUnifiedBtn" />
-						<Button text="Download" press="onDownloadCoupons" class="myUnifiedBtn" />
-					</OverflowToolbar>
-				</headerToolbar>
-				<!-- Columns -->
-				<columns>
-				<Column minScreenWidth="Tablet" demandPopin="true">
-	<Text text="Branch"/>
-</Column>
-					<Column demandPopin="true">
-						<Text text="Coupon Code"/>
-					</Column>
-					<Column demandPopin="true">
-						<Text text="Discount Type"/>
-					</Column>
+				<Table id="couponTable" items="{path: 'CouponModel>/', parameters: { groupHeaderFactory: '.createGroupHeader' }}" mode="MultiSelect" sticky="ColumnHeaders,HeaderToolbar" growing="true" busyIndicatorDelay="0" growingThreshold="100" alternateRowColors="true">
+					<!-- Header with actions -->
+					<headerToolbar>
+						<OverflowToolbar>
+							<Title text="Coupons ({= ${CouponModel>/}.length })" />
+							<ToolbarSpacer/>
+							<Button text="Share Coupon" press="onShareCoupon" class="myUnifiedBtn" />						
+							<Button text="Add" press="onAddCoupon" class="myUnifiedBtn" />
+							<Button text="Edit" press="onEditCoupon" class="myUnifiedBtn" />
+							<Button text="Delete" press="onDeleteCoupon" class="myUnifiedBtn" />
+							<Button text="Download" press="onDownloadCoupons" class="myUnifiedBtn" />
+						</OverflowToolbar>
+					</headerToolbar>
+					<!-- Columns -->
+					<columns>
 					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Discount Value"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Max Uses"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Used Count"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Per User Limit"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Min Order Value"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Start Date"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="End Date"/>
-					</Column>
-					<!-- <Column minScreenWidth="Tablet" demandPopin="true"><Text text="Status"/></Column> -->
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Created At"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Created By"/>
-					</Column>
-				</columns>
-				<!-- Row template -->
-				<items>
-					<ColumnListItem>
-						<cells>
-						<Text text="{CouponModel>BranchCode}" />
-							<Text text="{CouponModel>CouponCode}" />
-							<Text text="{CouponModel>DiscountType}" />
-							<Text text="{   parts: [      { path: 'CouponModel>DiscountValue' },      { path: 'CouponModel>DiscountType' }   ],   formatter: '.Formatter.formatDiscountValue'
-}" />
-							<Text text="{CouponModel>MaxUses}" />
-							<Text text="{CouponModel>UsedCount}" />
-							<Text text="{CouponModel>PerUserLimit}" />
-							<Text text="{CouponModel>MinOrderValue}" />
-							<Text text="{    path: 'CouponModel>StartDate',    formatter: '.Formatter.formatDate'}" />
-							<Text text="{    path: 'CouponModel>EndDate',    formatter: '.Formatter.formatDate'}" />
-							<!-- <ObjectStatus text="{CouponModel>Status}" state="{ path: 'CouponModel>Status', formatter: '.Formatter.formatStatusState' }"/> -->
-							<Text text="{    path: 'CouponModel>CreatedAt',    formatter: '.Formatter.formatDate'}" />
-							<Text text="{CouponModel>CreatedBy}" />
-						</cells>
-					</ColumnListItem>
-				</items>
-			</Table>
-		</content>
-	</Page>
-</mvc:View>
+		<Text text="Branch"/>
+	</Column>
+						<Column demandPopin="true">
+							<Text text="Coupon Code"/>
+						</Column>
+						<Column minScreenWidth="Desktop" demandPopin="true">
+							<Text text="Discount Type"/>
+						</Column>
+						<Column minScreenWidth="Tablet" demandPopin="true">
+							<Text text="Discount Value"/>
+						</Column>
+						<Column minScreenWidth="Tablet" demandPopin="true">
+							<Text text="Max Uses"/>
+						</Column>
+						<!-- <Column  demandPopin="true">
+							<Text text="Used Count"/>
+						</Column> -->
+						<Column minScreenWidth="Tablet" demandPopin="true">
+							<Text text="Per User Limit"/>
+						</Column>
+						<Column minScreenWidth="Tablet" demandPopin="true">
+							<Text text="Min Order Value"/>
+						</Column>
+						<Column minScreenWidth="Desktop" demandPopin="true">
+							<Text text="Start Date"/>
+						</Column>
+						<Column minScreenWidth="Desktop" demandPopin="true">
+							<Text text="End Date"/>
+						</Column>
+						<!-- <Column minScreenWidth="Tablet" demandPopin="true"><Text text="Status"/></Column> -->
+						<Column minScreenWidth="Desktop"	 demandPopin="true">
+							<Text text="Created At"/>
+						</Column>
+						<Column minScreenWidth="Tablet" demandPopin="true">
+							<Text text="Created By"/>
+						</Column>
+					</columns>
+					<!-- Row template -->
+					<items>
+						<ColumnListItem>
+							<cells>
+							<Text text="{CouponModel>BranchCode}" />
+								<Text text="{CouponModel>CouponCode}" />
+								<Text text="{CouponModel>DiscountType}" />
+								<Text text="{   parts: [      { path: 'CouponModel>DiscountValue' },      { path: 'CouponModel>DiscountType' }   ],   formatter: '.Formatter.formatDiscountValue'
+	}" />
+								<Text text="{CouponModel>MaxUses}" />
+								<!-- <Text text="{CouponModel>UsedCount}" /> -->
+								<Text text="{CouponModel>PerUserLimit}" />
+								<Text text="{CouponModel>MinOrderValue}" />
+								<Text text="{    path: 'CouponModel>StartDate',    formatter: '.Formatter.formatDate'}" />
+								<Text text="{    path: 'CouponModel>EndDate',    formatter: '.Formatter.formatDate'}" />
+								<!-- <ObjectStatus text="{CouponModel>Status}" state="{ path: 'CouponModel>Status', formatter: '.Formatter.formatStatusState' }"/> -->
+								<Text text="{    path: 'CouponModel>CreatedAt',    formatter: '.Formatter.formatDate'}" />
+								<Text text="{CouponModel>CreatedBy}" />
+							</cells>
+						</ColumnListItem>
+					</items>
+				</Table>
+			</content>
+		</Page>
+	</mvc:View>
