--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1046,7 +1046,6 @@
 }
 
 
-
 .roomCarouselImage {
   width: 100%;
   height: 500px !important;
@@ -1065,6 +1064,10 @@
   object-fit: cover;
 }
 @media (max-width: 768px) {
+    /* .roomCarouselImage {
+    height: 200px !important;
+    max-height: 200px !important;
+  } */
   .roomCarouselImage {
     height: 260px !important;
     max-height: 260px !important;
@@ -1074,6 +1077,7 @@
   outline: none !important;
   box-shadow: none !important;
 }
+
 .noImagePlaceholder {
   height: 250px;
   width: 100%;
@@ -1201,7 +1205,7 @@
   }
   .bookNowTile .sapMGTContent {
     justify-content: center !important;
-    /* align-items: center !important; */
+    align-items: center !important;
   }
   .priceRow {
     gap: 10px !important;
@@ -1218,31 +1222,32 @@
   .sapMGTHdrTxt {
     margin-top: -3px !important;
   } /* Dialog height always full */
-  #roomDetailID.sapMDialog,
-  #roomDetailID {
-    width: 100% !important;
-    max-width: 100% !important;
-    height: 100% !important;
-    max-height: 94% !important;
-    border-radius: 0 !important;
-    margin: 0 !important;
-  }
-  #roomDetailID .sapMDialogScroll {
+  
+
+    #roomDetailID .sapMDialogScroll {
     height: calc(100vh - 60px) !important;
     max-height: calc(100vh - 60px) !important;
     overflow-y: auto !important;
-    padding-bottom: 16px !important; /* small safe padding */
-  }
-  .roomCarouselImage {
-    height: 200px !important;
-    max-height: 200px !important;
-  }
+    }
+}
+
+
+
+
+
+
+
+
   #roomDetailID .sapMDialogSection {
-    /* overflow-y: auto !important; */
+    overflow-y: auto !important;
     padding-bottom: 0 !important;
     margin-bottom: 0 !important;
   }
-}
+
+
+
+
+
 
 .roomTopAligned {
   margin-top: 12px !important;
@@ -1461,10 +1466,10 @@ span.sapMBtnInner.sapMBtnEmphasized {
   padding: 8px 0 !important;
   margin: 0 !important;
   height: 100% !important;
-  /* display: flex !important; */
+  display: flex !important;
   flex-direction: column !important;
-  /* justify-content: center !important;
-  align-items: center !important; */
+  justify-content: center !important;
+  align-items: center !important;
 }
 .defaultTile,
 .bookNowTile,
@@ -1517,9 +1522,9 @@ span.sapMBtnInner.sapMBtnEmphasized {
 }
 .bookNowTile .sapMGTContent {
   height: 100% !important;
-  /* display: flex !important; */
+  display: flex !important;
   flex-direction: column !important;
-  /* justify-content: center !important; */
+  justify-content: center !important;
 }
 
 .bookNowTile .sapMGTHdrTxt > .sapMText {
@@ -1947,3 +1952,7 @@ span.sapMBtnInner.sapMBtnEmphasized {
     text-align: center !important;
 }
   
+
+#roomDetailID.sapMDialog.sapMDialogStretched {
+    width: 100% !important;
+}
