Payment logic changes

--- a/project1/webapp/view/Book_Room.view.xml
+++ b/project1/webapp/view/Book_Room.view.xml
@@ -116,7 +116,7 @@
                     press="onOpenProceedtoPay"
                 />
                 <Button
-                    text="Cancel"
+                    text="Cancel Booking"
                     visible="{OBTNModel>/Cancel}"
                     class="myUnifiedBtn"
                     press="onCancelPress"
