--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -404,8 +404,8 @@
   background: #fff;
   border-radius: 32px;
   box-shadow: 0 4px 12px 0 rgba(60, 70, 90, 0.08);
-  padding: 4px;
-  width: 420px;
+  padding: 4px 4px 4px 20px;
+  width: 100%;
   display: flex;
   justify-content: left;
   align-items: left;
