--- a/project1/webapp/view/FacilitiesDetails.view.xml
+++ b/project1/webapp/view/FacilitiesDetails.view.xml
@@ -188,7 +188,6 @@
                                                 style="Transparent"
                                                 tooltip="Add Image"
                                                 placeholder=" "
-                                                class="myUnifiedBtn"
                                                 buttonOnly="true"
                                                 sameFilenameAllowed="true"
                                                 visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
@@ -198,9 +197,9 @@
 										<!-- Delete icon -->
 										<m:Button
                                             icon="sap-icon://delete"
-                                            class="myUnifiedBtn"
                                             visible="{= ${editable>/Edit} === true &amp;&amp; ${DisplayImagesModel>isPlaceholder} === false }"
                                             press=".onDeleteImage"
+                                            type="Reject"
                                             tooltip="Delete Image"
                                             width="100%"
                                         />
