--- a/project1/webapp/view/Room_Details.view.xml
+++ b/project1/webapp/view/Room_Details.view.xml
@@ -20,7 +20,7 @@
                 useToolbar="false"
                 clear="RD_onPressClear"
                 showClearOnFB="true"
-                search="RD_onSearch"
+                search="Onsearch"
                 filterChange="IA_.onFilterChange"
                 afterVariantLoad="IA_.onAfterVariantLoad"
                 showFilterConfiguration="false"
